# QuasarAppLib

./: .gitignore  .gitmodules  CMakeLists.txt  QuasarApp.pro  QuasarLib.pri  QuasarLibDepends.pri  QuasaraApp.pro  README.md  crc32constexper.h  deploy.pri  doctor.cpp  doctor.h  doctortest.cpp  doctortest.h  doxygen.conf  global.h  helpdata.cpp  helpdata.h  humanreadableobject.cpp  humanreadableobject.h  ipill.cpp  ipill.h  isettings.cpp  isettings.h  locales.cpp  locales.h  optiondata.cpp  optiondata.h  params.cpp  params.h  qaglobalutils.cpp  qaglobalutils.h  qalogger.cpp  qalogger.h  qaplatformutils.h  qaplatformutils_linux.cpp  qasecretservice.cpp  qasecretservice.h  qaservice.cpp  qaservice.h  (+16 more)
Etalons/qmake/: ccache.pri  install_prefix.pri  locales.pri
cmake/: QuasarApp.cmake  QuasarAppOut.cmake  ccache.cmake
qmakeEtalons/: locales.pri
